<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">



    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:inputType="number"
        android:defaultValue="@string/pref_default_proportion"
        android:key="@string/pref_key_proportion"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_proportion_title"
        android:summary="@string/pref_title_proportion_summary"/>

    <EditTextPreference
        android:capitalize="words"
        android:numeric="decimal"
        android:defaultValue="@string/pref_default_consumption"
        android:key="@string/pref_key_consumption"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_consumption_title"
        android:summary="@string/pref_title_consumption_summary"/>

    <EditTextPreference
        android:capitalize="words"
        android:numeric="decimal"
        android:defaultValue="@string/pref_default_price"
        android:key="@string/pref_key_price"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_price_title"
        android:summary="@string/pref_title_price_summary"/>
</PreferenceScreen>
